--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# pushoverr 0.1.4
+
+* Added cancel_receipt function to cancel an emergency message
+* Removed the port number from API calls
+
 # pushoverr 0.1.3
 
 * Added support for -2 priority messages ('silent'): http://updates.pushover.net/post/87000633097/api-change-to-message-priority-1-new-priority-2
